// Copyright 2024 Gravitational, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package teleport.devicetrust.v1;

option go_package = "github.com/gravitational/teleport/api/gen/proto/go/teleport/devicetrust/v1;devicetrustv1";

// A device web token is a token used to device-authenticate a Web UI session.
//
// Tokens are generally acquired on login and exchanged for a single
// on-behalf-of device authentication attempt, performed by Connect.
//
// See
// https://github.com/gravitational/teleport.e/blob/master/rfd/0009e-device-trust-web-support.md#device-web-token.
message DeviceWebToken {
  // Opaque token identifier.
  // Required for token usage.
  // System-generated.
  string id = 1;

  // Opaque device web token, in plaintext, encoded in base64.RawURLEncoding
  // (so it is inherently safe for URl use).
  // Required for token usage.
  // System-generated.
  string token = 2;

  // Identifier for the Web Session being device-authorized.
  // Required for creation.
  string web_session_id = 3;

  // Browser user agent, as acquired from the Web UI browser.
  // Used as part of expected device checks.
  // Required for creation.
  string browser_user_agent = 4;

  // Browser public IP, as acquired from the Web UI browser.
  // Used as part of expected device checks.
  // Required for creation.
  string browser_ip = 5;

  // Owner of the Web Session and trusted device.
  // Used internally by the Device Trust system.
  // Transient.
  string user = 6;

  // ID of the devices allowed to perform on-behalf-of device authentication.
  // Used internally by the Device Trust system.
  // Transient.
  repeated string expected_device_ids = 7;
}
